# mimic

./: ARCHITECTURE.md  Cargo.toml  LICENSE  MIGRATION.md  README.md
docs/: COMPARISON.md
examples/: example-config.toml  hooks-example.toml
examples/advanced/: README.md  mimic.toml
examples/advanced/machines/: home-desktop.toml  work-laptop.toml
examples/basic/: README.md  mimic.toml
examples/basic/dotfiles/: gitconfig  tmux.conf  vimrc  zshrc
examples/complete/: README.md  mimic.toml
examples/complete/dotfiles/: dev-aliases  tmux.conf  work-aliases
examples/complete/templates/: gitconfig.tmpl  npmrc.tmpl  zshrc.tmpl
examples/multi-host/: README.md  mimic.toml
examples/multi-host/dotfiles/: gitconfig.tmpl  personal-zshrc  server-bashrc  server-ssh-config  tmux.conf  work-ssh-config  work-zshrc
examples/multi-host/templates/: fish-config.fish.tmpl
examples/organized/: README.md  mimic.toml
examples/templates/: README.md  mimic.toml
examples/templates/dotfiles/: gitconfig.tmpl  (+2 more)
src/: cli.rs  config.rs  diff.rs  error.rs  expand.rs  git_auth.rs  hooks.rs  installer.rs  lib.rs  linker.rs  main.rs  mise.rs  secrets.rs  secrets_scan.rs  spinner.rs  state.rs  template.rs  zerobrew.rs
tests/: cli_test.rs  config_test.rs  conflict_test.rs  diff_test.rs  error_test.rs  hooks_test.rs  host_test.rs  installer_test.rs  integration_test.rs  linker_test.rs  mise_test.rs  role_filter_test.rs  secrets_test.rs  secrets_test_fix.patch  state_test.rs  status_test.rs  template_test.rs  undo_test.rs
tests/integration/: end_to_end_test.rs  init_test.rs
(+15 files in other folders)
