[package]
name = "mimic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
handlebars = "6.2"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
walkdir = "2.5"
shellexpand = "3.1"
directories = "5.0"
whoami = "2.1.1"
dialoguer = "0.11"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
regex = "1.11"
glob = "0.3.3"
