[package]
name = "mimic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
chrono = { version = "0.4", features = ["serde"] }
handlebars = "6.4"
clap = { version = "4.5", features = ["derive"] }
colored = "3.1"
walkdir = "2.5"
home = "0.5"
directories = "6.0"
whoami = "2.1.1"
dialoguer = "0.12"
indicatif = "0.18.4"
ripsecrets = "0.1.11"
termcolor = "1.4"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.25"
regex = "1.12"
glob = "0.3.3"
